test/trivial/deitz/coerce-assign/assign_const.good
assign_const.chpl:2: error: cannot assign to const variable
