test/trivial/deitz/coerce-assign/assign_const.chpl
const x = 1;
x = 2;
writeln(x);
